# codex-cont-rust

./: Cargo.toml  README.md  README_zh.md  config.example.toml
.github/workflows/: release.yml
INSTALL-GUIDE-AGENT/: AGENT.md
src/: app.rs  codex.rs  config.rs  creds.rs  lib.rs  logging.rs  main.rs  proxy.rs  service.rs  sse.rs  store.rs
tests/: middleware.rs
tests/fixtures/: codex_poc_r1.sse.txt  codex_poc_r2.sse.txt
