[package]
name = "codex-cont"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = "0.8"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.8"
